--- a/components/header/index.wxss
+++ b/components/header/index.wxss
@@ -1,8 +1,7 @@
 /* components/header/header.wxss */
 .container{
-  /* width: 100%; */
-  width: 750rpx;
-  height: 80rpx;
+  width: 100%;
+  /* height: 50rpx; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -17,5 +16,8 @@
 
 .login-btn{
   color: #363;
-  margin-right: 42rpx;
+  margin-right: 32rpx;
+  padding: 5rpx 10rpx;
+  border-radius: 5rpx;
+  /* background: #eee */
 }
