--- a/pages/exam/exam.wxss
+++ b/pages/exam/exam.wxss
@@ -1,4 +1,19 @@
 /* pages/exam/exam.wxss */
 .container{
-  width: 750rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100rpx;
+  line-height: 100rpx;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.list{
+  width: 100%;
 }
