--- a/components/exam-list/index.wxss
+++ b/components/exam-list/index.wxss
@@ -13,6 +13,10 @@
   border-bottom: 1rpx solid #f5f5f5;
 }
 
+.examName{
+  color: #50bba7;
+}
+
 .classinfo{
   display: flex;
   flex-direction: row;
