--- a/pages/exam/exam.wxml
+++ b/pages/exam/exam.wxml
@@ -1,7 +1,9 @@
 <!--pages/exam/exam.wxml-->
 <view class='container'>
   <v-header class="header" isLogin="{{isLogin}}" userName="{{userName}}"></v-header>
-  <block wx:for="{{List}}" wx:key="">
-    <v-examlist class="list" examInfo="{{item}}"></v-examlist>
-  </block>
+  <view class='list-container'>
+    <block wx:for="{{List}}" wx:key="">
+      <v-examlist class="list" examInfo="{{item}}"></v-examlist>
+    </block>
+  </view>
 </view>
