--- a/pages/exam/exam.wxss
+++ b/pages/exam/exam.wxss
@@ -6,10 +6,18 @@
 }
 
 .header{
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 100rpx;
   line-height: 100rpx;
+  background: #fff;
   border-bottom: 1px solid #f5f5f5;
+}
+
+.list-container{
+  width: 100%;
+  margin-top: 100rpx;
 }
 
 .list{
