--- a/pages/student-info/student-info.wxss
+++ b/pages/student-info/student-info.wxss
@@ -1,1 +1,92 @@
 /* pages/student-info/student-info.wxss */
+.container {
+  width: 100%;
+  color: #50bba7;
+  display: flex;
+  flex-direction: column;
+  /* text-align: center; */
+  align-items: center;
+}
+
+.title-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 180rpx;
+  background: #fff;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.title {
+  width: 100%;
+  height: 100rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sub-title {
+  width: 100%;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+.subject-info {
+  width: 100%;
+  height: 900rpx;
+  margin-top: 180rpx;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sub-info {
+  width: 100%;
+  height: 100rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.sub {
+  flex: 1;
+}
+
+.list {
+  flex: 1;
+  color: #50bba7;
+}
+
+.list-red {
+  flex: 1;
+  color: red;
+}
+
+.rank {
+  width: 100%;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  /* border-bottom: 1px solid #f5f5f5; */
+}
+
+.rank-info {
+  flex: 1
+}
+
+.rank-foot {
+  margin-bottom: 80rpx;
+}
