--- a/pages/subject/subject.wxss
+++ b/pages/subject/subject.wxss
@@ -28,15 +28,66 @@
   width: 100%;
   height: 100%;
   display: flex;
-  text-align: center;
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, .5)
 }
 
 .bg {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   width: 80%;
   height: 80%;
-  background: #f5f5f5;
+  background: #fff;
   border-radius: 10rpx;
+}
+
+.sub-title{
+  position: fixed;
+  background: #fff;
+  height: 160rpx;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  border-radius: 10rpx;
+  border-bottom: 1rpx solid #f5f5f5;
+}
+
+.sub-name{
+  font-size: 38rpx;
+  line-height: 80rpx;
+  font-weight: 800;
+  color: #50bba7;
+}
+
+.list-info{
+  width: 100%;
+  margin-top: 160rpx;
+  border-bottom: 1rpx solid #f5f5f5;
+}
+
+.info{
+  width: 100%;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  border-bottom: 1rpx solid #f5f5f5;
+}
+
+.item{
+  flex: 1;
+  line-height: 80rpx;
+  color: #50bba7;
+  font-size: 32rpx;
+}
+
+.item-red{
+  flex: 1;
+  line-height: 80rpx;
+  color: red;
+  font-size: 32rpx;
 }
