--- a/pages/more/more.wxss
+++ b/pages/more/more.wxss
@@ -5,12 +5,38 @@
   text-align: center;
   align-items: center;
   width: 100%;
-  height: 900rpx;
+}
+
+.surprise{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.title{
+  color: #50bba7;
+  font-size: 28rpx;
+  height: 60rpx;
+  line-height: 60rpx;
 }
 
 .list{
-  color: #50bba7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   height: 100rpx;
+  line-height: 100rpx;
   width: 100%;
   border-bottom: 1rpx solid #f5f5f5;
+}
+
+.num{
+  color: red;
+}
+
+.num-blue{
+  color: blue;
 }
