--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -52,7 +52,7 @@
 }
 
 .bar {
-  border: 1px solid #f5f5f5;
+  border: 1px solid #ccc;
   border-radius: 15rpx;
   font-size: 14px;
   height: 34px;
@@ -61,4 +61,5 @@
 
 .in-bar {
   color: #50bba7;
+  margin-left: 10rpx;
 }
