--- a/pages/more/more.wxss
+++ b/pages/more/more.wxss
@@ -8,12 +8,39 @@
 }
 
 .surprise{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 261rpx;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  background: #fff;
+}
+
+.attention{
+  position: fixed;
+  top: 0;
+  display: flex;
+  height: 260rpx;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  background: #fff;
+}
+
+.text{
+  font-size: 32rpx;
+  color: red;
+}
+
+.text-1{
+  font-size: 28rpx;
+  color: #999;
 }
 
 .title{
@@ -30,7 +57,12 @@
   height: 100rpx;
   line-height: 100rpx;
   width: 100%;
-  border-bottom: 1rpx solid #f5f5f5;
+  /* border-bottom: 1rpx solid #f5f5f5; */
+}
+
+.change{
+  height: 90rpx;
+  color: #50bba7;
 }
 
 .num{
@@ -39,4 +71,8 @@
 
 .num-blue{
   color: blue;
+}
+
+.search{
+  width: 100%;
 }
