--- a/components/header/index.wxss
+++ b/components/header/index.wxss
@@ -1,7 +1,7 @@
 /* components/header/header.wxss */
-.container{
+.container {
   width: 100%;
-  /* height: 50rpx; */
+  height: 100rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -10,21 +10,40 @@
   /* background: #eee; */
 }
 
-.user-name{
-  color: #50bba7;
-  margin-left: 42rpx;
-  font-size: 36rpx;
+.title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
 }
 
-.login-btn{
-  color: #363;
+.user-btn {
+  height: 100rpx;
+  width: 100rpx;
+  margin-left: 38rpx;
+}
+
+.user-img {
+  height: 90rpx;
+  width: 90rpx;
+  padding: 5rpx;
+}
+
+.user-name {
+  color: #50bba7;
+  margin-left: 18rpx;
+  font-size: 28rpx;
+}
+
+.login-btn {
+  color: red;
   width: 80rpx;
   height: 80rpx;
   margin-right: 20rpx;
   padding: 10rpx;
 }
 
-.img{
-  width: 50rpx;
-  height: 50rpx;
+.img {
+  width: 40rpx;
+  height: 40rpx;
 }
