--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -2,10 +2,10 @@
 <view class='container'>
   <image class='icon' src='/images/logo.png'></image>
   <view class='title'>成绩查询</view>
-  
+
   <view class='input-bar'>
-    <input wx:if="{{!userType}}" bindinput="userNameInput" placeholder-class='in-bar' value='{{userName}}' placeholder='学生姓名' class='bar' auto-focus='true' />
-    <input wx:if="{{userType}}" bindinput="teacherNameInput" placeholder-class='in-bar' value='{{teacherName}}' placeholder='教师姓名' class='bar' auto-focus='true' />
+    <input wx:if="{{!userType}}" bindinput="userNameInput" placeholder-class='in-bar' value='{{userName}}' placeholder='学生姓名' class='bar' />
+    <input wx:if="{{userType}}" bindinput="teacherNameInput" placeholder-class='in-bar' value='{{teacherName}}' placeholder='教师姓名' class='bar' />
     <input value='{{password}}' bindinput="passwordInput" placeholder-class='in-bar' placeholder='登录密码' bind:confirm="login" class='bar' />
   </view>
   <view class='btn'>
