--- a/components/show-list/index.wxss
+++ b/components/show-list/index.wxss
@@ -1,5 +1,5 @@
 /* components/show-list/index.wxss */
-.container{
+.container {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -7,31 +7,30 @@
   font-size: 32rpx;
   height: 100rpx;
   text-align: center;
-  border-bottom: 1px solid #f5f5f5;
-  color: #50bba7;
+  color: #666;
 }
 
-.name{
+.name {
   flex: 1;
 }
 
-.sum{
+.sum {
   flex: 1;
 }
 
-.schoolRank{
+.schoolRank {
   flex: 1;
 }
 
-.classRank{
+.classRank {
   flex: 1;
 }
 
-.sub{
+.sub {
   flex: 1;
 }
 
-.sub-red{
+.sub-red {
   color: red;
   flex: 1;
 }
