--- a/pages/exam/exam.wxml
+++ b/pages/exam/exam.wxml
@@ -2,8 +2,8 @@
 <view class='container'>
   <v-header class="header" isLogin="{{isLogin}}" userName="{{userName}}"></v-header>
   <view class='list-container'>
-    <block wx:for="{{List}}" wx:key="">
-      <v-examlist class="list" examInfo="{{item}}"></v-examlist>
-    </block>
+    <view wx:for="{{List}}" wx:key="index" class="list-color">
+      <v-examlist examInfo="{{item}}"></v-examlist>
+    </view>
   </view>
 </view>
