--- a/pages/exam/exam.wxss
+++ b/pages/exam/exam.wxss
@@ -1,11 +1,12 @@
 /* pages/exam/exam.wxss */
-.container{
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header{
+.header {
   position: fixed;
   top: 0;
   width: 100%;
@@ -15,11 +16,16 @@
   border-bottom: 1px solid #f5f5f5;
 }
 
-.list-container{
+.list-container {
   width: 100%;
   margin-top: 100rpx;
 }
 
-.list{
+.list-color {
   width: 100%;
+  background: #fff;
+}
+
+.list-color:nth-child(2n) {
+  background: #f5f5f5;
 }
