--- a/pages/student-list/student-list.wxss
+++ b/pages/student-list/student-list.wxss
@@ -11,7 +11,8 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 140rpx;
+  height: 180rpx;
+  background: #fff;
 }
 
 .title {
@@ -29,13 +30,14 @@
 .examName {
   padding: 10rpx;
   margin-left: 20rpx;
-  color: #50bba7;
+  color: #666;
+  font-weight: 800;
 }
 
-.picker{
+.picker {
   color: #fff;
   padding: 10rpx;
-  background: rgba(80, 187, 167, .8);
+  background: rgba(80, 187, 167, 0.8);
   border-radius: 10rpx;
 }
 
@@ -52,18 +54,20 @@
   text-align: center;
   align-items: center;
   justify-content: space-around;
-  border-bottom: 1px solid #f5f5f5;
   font-size: 32rpx;
-  color: #50bba7;
-  background: #eee;
+  color: #666;
+  background: #a7ddd3;
 }
 
 .list-container {
-  background: #fff;
   margin-top: 180rpx;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: space-around;
+}
+
+.list:nth-child(2n) {
+  background: rgba(80, 187, 167, 0.2);
 }
