--- a/pages/subject-list/subject-list.wxss
+++ b/pages/subject-list/subject-list.wxss
@@ -1,4 +1,5 @@
 /* pages/subject-list/subject-list.wxss */
+
 .container {
   display: flex;
   flex-direction: column;
@@ -8,22 +9,22 @@
 .header {
   width: 100%;
   position: fixed;
+  top: 0;
   height: 180rpx;
   display: flex;
   text-align: center;
   flex-direction: column;
-  justify-content: space-between;
-  background: #f5f5f5;
+  background: #a7ddd3;
 }
 
 .title {
   font-weight: 800;
-  /* height: 100rpx; */
-  color: #50bba7;
+  height: 61rpx;
+  color: #666;
 }
 
 .select {
-  height: 40rpx;
+  height: 61rpx;
   width: 100%;
   display: flex;
   text-align: center;
@@ -41,23 +42,22 @@
 }
 
 .info {
-  height: 40rpx;
+  height: 61rpx;
   width: 100%;
   display: flex;
   text-align: center;
   align-items: center;
   flex-direction: row;
-  /* justify-content: space-around; */
   font-size: 28rpx;
 }
 
 .flat {
-  color: #50bba7;
+  color: #666;
   flex: 1;
 }
 
 .pass {
-  color: #50bba7;
+  color: #666;
   flex: 1;
 }
 
@@ -81,4 +81,9 @@
 
 .list {
   width: 100%;
+}
+
+.list:nth-child(2n) {
+  width: 100%;
+  background: rgba(80, 187, 167, 0.2);
 }
