--- a/pages/subject/subject.wxss
+++ b/pages/subject/subject.wxss
@@ -1,4 +1,5 @@
 /* pages/subject/subject.wxss */
+
 .container {
   display: flex;
   flex-direction: column;
@@ -15,11 +16,16 @@
 }
 
 .list {
-  color: #50bba7;
+  color: #666;
   height: 100rpx;
   width: 100%;
   line-height: 100rpx;
-  border-bottom: 1rpx solid #f5f5f5;
+  /* border-bottom: 1rpx solid #f5f5f5; */
+}
+
+.list:nth-child(2n) {
+  /* background: #f5f5f5; */
+  background: rgba(80, 187, 167, 0.2);
 }
 
 .sub-info {
@@ -30,7 +36,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, .5)
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .bg {
@@ -43,49 +49,65 @@
   border-radius: 10rpx;
 }
 
-.sub-title{
+.sub-title {
   position: fixed;
-  background: #fff;
+  background: #50bba7;
   height: 160rpx;
   width: 80%;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
-  border-radius: 10rpx;
-  border-bottom: 1rpx solid #f5f5f5;
+  border-radius: 10rpx 10rpx 0 0;
 }
 
-.sub-name{
+.sub-name {
   font-size: 38rpx;
   line-height: 80rpx;
   font-weight: 800;
-  color: #50bba7;
+  color: #fff;
 }
 
-.list-info{
+.item-title {
+  flex: 1;
+  line-height: 80rpx;
+  color: #fff;
+  font-size: 32rpx;
+}
+
+.list-info {
   width: 100%;
   margin-top: 160rpx;
-  border-bottom: 1rpx solid #f5f5f5;
 }
 
-.info{
+.title-info {
   width: 100%;
   height: 80rpx;
   display: flex;
   flex-direction: row;
   text-align: center;
-  border-bottom: 1rpx solid #f5f5f5;
 }
 
-.item{
+.info {
+  width: 100%;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.info:nth-child(2n) {
+  background: #a7ddd3;
+}
+
+.item {
   flex: 1;
   line-height: 80rpx;
-  color: #50bba7;
+  color: #666;
   font-size: 32rpx;
 }
 
-.item-red{
+.item-red {
   flex: 1;
   line-height: 80rpx;
   color: red;
