--- a/pages/student-info/student-info.wxss
+++ b/pages/student-info/student-info.wxss
@@ -62,7 +62,7 @@
   align-items: center;
   border-bottom: 1px solid #f5f5f5;
   /* background: #f5f5f5; */
-  background: rgba(80, 187, 167, 0.2);
+  background: #dcf1ed;
 }
 
 .sub-info:nth-child(2n) {
